CDN, solves flickering

--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,21 @@
 html, body{
-	max-height: 100%;
 	padding: 0;
 	margin:0;
 	position: relative;
 	font-family: Arial, sans-serif;
 }
-
+html{
+  height: 100%;
+}
+body {
+  min-height: 100%;
+}
 .answer{
     font-weight: bold;
     font-size: 120pt;
-
     color: black;
     text-align: center;
-    margin-top: 100px;
+    padding-top: 100px;
     text-transform: uppercase;
 }
 
@@ -22,7 +25,7 @@ html, body{
 	text-align: center;
 	color: #666;
 	font-size: 11px;
-	bottom: -10px
+	bottom: 0
 }
 .footer a{
 	color: #333
@@ -31,4 +34,8 @@ html, body{
 img{
 	display: block;
 	margin:  50px auto 0 auto
+}
+
+[ng\:cloak], [ng-cloak], .ng-cloak {
+  display: none !important;
 }
